# Final_Project

./: CMakeLists.txt  Macros.h
HAL/TC72_Temp_sensor/: TC72.h
MCAL/DIO/: DIO.c  DIO.h  DIO_Cfg.c  DIO_Cfg.h
MCAL/SPI/: SPI.c  SPI.h  SPI_Cfg.c  SPI_Cfg.h
